function (add_radixtree_test file_name )
  add_executable(${file_name} ${file_name}.cc)
  add_dependencies(${file_name} radixtree_shelf_base_dir)
  target_link_libraries(${file_name} radixtree gtest boost_filesystem boost_system)
  add_test(NAME ${file_name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
endfunction()

add_radixtree_test(test_radix_tree)
add_radixtree_test(test_split_list)
add_radixtree_test(test_kvs)
